# sebench-ai-infra-replica

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: agent.yaml  benchmark.yaml  judge.yaml
docker/: judge.Dockerfile  work.Dockerfile
docs/: APPLE_SILICON_BENCHMARKS.md  BENCHMARK_RESULTS.md  NEXT_STEPS.md  PUBLIC_SWE_REFERENCE_MAP.md  REPRODUCTION_NOTES.md  SE_BENCH_MATURE_PROJECT_OPTIMIZATION_ANALYSIS.md  SE_BENCH_REPRODUCTION_TECH_DESIGN.md  STUDENT_LOOP_REPORT.md  TECHNICAL_DESIGN.md  TRAINING_RECIPE.md  architecture.mmd  architecture_infographic_spec.json  isolation.mmd  optimization-loop.mmd  pipeline.mmd
docs/diagrams/: sebench-architecture.mmd  sebench-data-lineage.mmd  sebench-optimization-loop.mmd  sebench-pipeline.mmd
examples/: README.md  golden_tasks.json  patch_benchmark.json  pytest_plugin_policy_benchmark.json  realistic_benchmark.json  requirements.json  synthetic_spatial_scene.json  toy_benchmark.json
scripts/: analyze_io_pytest_diagnostics.py  benchmark_apple_silicon.py  build_git_pytest_benchmark.py  build_patch_benchmark_manifest.py  build_realistic_benchmark_manifest.py  compare_benchmark_reports.py  run_mac_mlx_benchmark.py  run_mock_reproduction.py  run_worker_sweep.py
src/sebench_infra/: __init__.py  api.py  cli.py  observability.py  settings.py  storage.py
tests/: test_agent_runners.py  test_benchmark_cli.py  test_geometry.py  test_integration.py  test_public_swe_loop.py  test_reports.py  test_schema.py  test_scoring.py  test_shared_cache_scheduler.py  test_training_loop.py  test_whitelist.py
(+37 files in other folders)
