[project]
name = "sebench-ai-infra-replica"
version = "0.1.0"
description = "Public-paper reproduction prototype for SE-Bench style long-horizon agent evaluation and 3D spatial reasoning diagnosis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SE-Bench Replica Contributors" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "numpy>=1.26",
  "scipy>=1.11",
  "docker>=7.1",
  "httpx>=0.27",
  "prometheus-client>=0.20",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
llm = ["openai>=1.40"]
training = [
  "datasets>=2.20",
  "transformers>=4.43",
  "peft>=0.11",
  "accelerate>=0.33",
]
apple = [
  "mlx>=0.25",
]
mps = [
  "torch>=2.4",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
sebench = "sebench_infra.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sebench_infra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/sebench_infra/cli.py" = ["B008"]
